--- a/coffee blog/mystyle.css
+++ b/coffee blog/mystyle.css
@@ -1,6 +1,9 @@
 /*global*/
-*{margin: 0%;
-    padding: 0;}
+
+*{
+    margin: 0%;
+    padding: 0;
+}
 body{
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -14,28 +17,18 @@ h1,h2,h3{
     padding-top: 10px;
     padding-bottom: 10px;
 }
+h2{
+    text-align: center;
+}
 /*utilities*/
+
 .container{
     width: 80%;
     margin-left: auto;
     margin-right: auto;
 }
-.btn-read{
+.btn{ 
     display: inline-block;
-    background-color: black;
-    color: white;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 12px;
-    letter-spacing: 2px;
-    padding: 15px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-.btn-more{  
-     display: inline-block;
-    background-color: rgb(145, 86, 31);
-    color: white;
     text-decoration: none;
     text-transform: uppercase;
     font-size: 12px;
@@ -45,11 +38,99 @@ h1,h2,h3{
     margin-bottom: 20px;
 
 }
+.btn-read{
+    background-color: black;
+    color: white;
+    }
+.btn-more{  
+    background-color: rgb(145, 86, 31);
+    color: white;
+    }
 /*header*/
-header{
+.site-header{
     background-image: url(img/banner.jpg);
     background-size: cover;
     height: 400px;
     text-align: center;
     color: white;
+}
+.secondary-header{
+    background-color: black;
+    color: white;
+    height: 100px;
+}
+/*main*/
+
+.main-container{
+    display: flex;
+    justify-content: center;
+}
+.our-blog-container{
+    width: 65%;
+}
+.our-courses-container{
+    width: 35%;
+    margin-left: 20px;
+}
+
+/*memu nav*/
+.nav-menu-bar{
+    display: flex;
+    justify-content: space-around;
+}
+
+.menu a{
+    color: white;
+    text-decoration: none;
+    margin-right: 20px;
+}
+/*blog*/
+.blog-item{
+    border-bottom: 1px solid gray;
+    margin-bottom: 20px;
+}
+/*courses*/
+
+.course-item{
+    border-bottom: 1px solid gray;
+    margin-bottom: 20px;
+}
+/*contact page*/
+.form{
+display: flex;
+flex-direction: column;
+}
+.img-container{
+    
+}
+.inputs-container{
+    background-color: white;
+    padding: 30px;
+    margin-top: -50px;
+}
+.input-control{
+    margin-bottom: 20px;
+}
+.input-control input,
+.input-control textarea{
+    width: 70%;
+    padding: 5px;
+    border: 1px solid gray;
+    border-radius: 3px;
+}
+.input-control label{
+    display: inline-block;
+    width: 100px;
+    text-align: right;
+}
+
+/*about page*/
+
+.about-pic{
+    
+    width: 40%;
+    margin-left: 270px;
+}
+.text{
+    margin-left: 22%;
 }
